conformance/0.1/expected/errors/missing-space-before-pipe.cdx
<ExpectedError category=~syntax reason=~gloss-syn-missing-space-before-pipe/>
